# avx

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  build.zig  build.zig.zon  main.py  pyproject.toml
avx/: cli.py
avx/commands/: __init__.py  convert.py  ls.py
avx/converters/: __init__.py  docx_to_pdf.py  pptx_to_pdf.py
docs/: TODO.md  commands.md  installation_guidence.md
scripts/: install.bat  install.ps1  install.sh
src/: main.zig
src/commands/: ls.zig
