[project]
name = "avx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx>=0.2.4",
    "docx2pdf>=0.1.8",
    "pillow>=12.2.0",
    "pypandoc>=1.17",
    "rich>=15.0.0",
    "typer>=0.24.1",
]


[project.scripts]
avx = "avx.cli:main"
